--- a/05-17_Tidy_Tuesday/05_17_Tidy_tuesday.html
+++ b/05-17_Tidy_Tuesday/05_17_Tidy_tuesday.html
@@ -12,7 +12,7 @@
 
 <meta name="date" content="2022-05-17" />
 
-<title>Tidy_Tuesday 5-17-2022: Eurovision</title>
+<title>Tidy Tuesday 5-17-2022: Eurovision</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -362,7 +362,7 @@ pre code {
 
 
 
-<h1 class="title toc-ignore">Tidy_Tuesday 5-17-2022: Eurovision</h1>
+<h1 class="title toc-ignore">Tidy Tuesday 5-17-2022: Eurovision</h1>
 <h4 class="date">2022-05-17</h4>
 
 </div>
