--- a/03-05_Tidy_Tuesday/trash_collection.html
+++ b/03-05_Tidy_Tuesday/trash_collection.html
@@ -12,7 +12,7 @@
 <meta name="author" content="Sara Colando" />
 
 
-<title>Tiy Tuesday 03-05-2024: Mr. Trash Wheel</title>
+<title>Tidy Tuesday 03-05-2024: Mr. Trash Wheel</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -349,7 +349,7 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">Tiy Tuesday 03-05-2024: Mr. Trash
+<h1 class="title toc-ignore">Tidy Tuesday 03-05-2024: Mr. Trash
 Wheel</h1>
 <h4 class="author">Sara Colando</h4>
 
@@ -447,7 +447,7 @@ df |&gt;
 <pre class="r"><code>#ggsave(&quot;Desktop/mister_trash.png&quot;, height = 8, width = 12, units = &quot;in&quot;)</code></pre>
 <pre class="r"><code># for funsies
 praise::praise()</code></pre>
-<pre><code>## [1] &quot;You are super!&quot;</code></pre>
+<pre><code>## [1] &quot;You are glorious!&quot;</code></pre>
 
 
 
